review-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security-goals
  labels:
    name: security-goals
