review-manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api 
  name:  api
  namespace: security-goals
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: api 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: gcr.io/security-goals/api
          imagePullPolicy: Always
          name: api 
          resources: {}
          livenessProbe:
            httpGet:
              path: /monitoring/alive
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /monitoring/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5 
          volumeMounts:
            - name: compliance-checks
              mountPath: /checks
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: compliance-checks
          persistentVolumeClaim:
            claimName: checks-claim
status: {}
