review-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app 
  name:  app
  namespace: security-goals
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: app 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: cdssnc/cra-alpha
          imagePullPolicy: Always
          name: app 
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
