review-manifests/runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: runner 
  name:  runner
  namespace: security-goals
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: runner 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: runner
    spec:
      containers:
        - image: gcr.io/security-goals/runner
          imagePullPolicy: Always
          name: runner 
          resources: {}
          livenessProbe:
            httpGet:
              path: /alive
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
