review-manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: api
  name: api
  namespace: security-goals
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: api
