review-manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: app
  name: app
  namespace: security-goals
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: app
