review-manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
  namespace: security-goals
spec:
  ports:
    - port: 27017
      name: '27017' 
      targetPort: 27017
  type: ClusterIP
  selector:
    app: mongo
