review-manifests/pdf-report-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pdf-report
  name: pdf-report
  namespace: security-goals
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: pdf-report
