review-manifests/performance-index-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: performance-index
  name: performance-index
  namespace: security-goals
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: performance-index
