review-manifests/runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: runner
  name: runner
  namespace: security-goals
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: runner
