review-manifests/web-report-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: web-report
  name: web-report
  namespace: security-goals
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: web-report
